refactor: create service for image validation